# pytest-bq

./: .envrc  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  shell.nix
pytest_bq/: __init__.py  config.py  plugin.py
pytest_bq/executor/: __init__.py  process.py
pytest_bq/factories/: __init__.py  client.py  proc.py
tests/: conftest.py  test_bq.py
tests/resources/: test_data.yaml
